<resources>
    <string name="app_name">To-Do List</string>
    <string name="app_version">Version: 1.0.1</string>
    <string name="dlg_title_alert" translatable="false">Alert</string>
    <string name="dlg_btn_ok" translatable="false">OK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Prioritize your day with a to-do list.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Tasks</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="do_you_want_quit">Do you want to quit?</string>
    <string name="tab_again_to_quit">Tab again to quit the app. See you next tim~</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Task Description</string>
    <string name="add_tasks">Enter your task details</string>
    <string name="update_tasks">Task details</string>
    <string name="category">No Category</string>
    <string name="category_text">Category</string>
    <string name="enter_category_text">Enter Category</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="add_category">Enter new task category</string>
    <string name="tasks">Tasks</string>
    <string name="delete_confirmation">Confirmation</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_confirmation_msg">Do you really want to delete all completed tasks?</string>
    <string name="yes">Yes</string>
    <string name="priority">Priority</string>
    <string name="date_time_picker">Date Time Picker</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_new_taks">New Task</string>
    <string name="menu_category">Category</string>
    <string name="menu_tasks_category">Manage Task Category</string>
    <string name="channel_name">To-Task Channel</string>
    <string name="channel_description">To-do Tasks Notification Channel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>