<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.misbah.todo.ui.tasks.TasksFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_tasks">
        <action
            android:id="@+id/action_tasksFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.misbah.todo.ui.addedittask.AddEditTaskFragment"
        android:label="{title}"
        tools:layout="@layout/bottom_sheet_add_tasks">
        <argument
            android:name="task"
            android:defaultValue="@null"
            app:argType="com.misbah.todo.core.data.model.Task"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <dialog
        android:id="@+id/deleteAllCompletedDialogFragment"
        android:name="com.misbah.todo.ui.dialogs.ConfirmationDialogFragment"
        android:label="@string/delete_confirmation" />
    <action
        android:id="@+id/action_global_deleteAllCompletedDialogFragment"
        app:destination="@id/deleteAllCompletedDialogFragment" />




    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.misbah.todo.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.misbah.todo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>