<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:chipcloud="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="farg"
            type="com.misbah.todo.ui.tasks.AddEditTaskFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        tools:context=".ui.profile.LoginDialogFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="1dp"
                android:orientation="vertical"
                android:background="@drawable/bg_quit_app_header"
                android:paddingTop="24dp">

                <ImageView
                    android:id="@+id/img_header"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="-4dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_edit_task_data" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/primary"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:id="@+id/text_heading"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/add_tasks"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/title"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:padding="12dp"
                    android:id="@+id/edit_text_task_title"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginStart="14dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:fontFamily="@font/lato"
                    android:textSize="14sp"
                    android:hint="@string/enter_title"
                    android:layout_marginEnd="16dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/enter_title"
                    android:inputType="textCapWords" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/description"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/edit_text_task_description"
                    android:layout_marginStart="16dp"
                    android:minLines="2"
                    android:gravity="start"
                    android:autofillHints="@string/enter_title"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/lato"
                    android:hint="@string/enter_description"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="12dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/priority"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <com.misbah.chips.ChipCloud
                    android:id="@+id/chip_tasks_priority"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_height="wrap_content"
                    chipcloud:allCaps="false"
                    chipcloud:deselectTransitionMS="500"
                    chipcloud:deselectedColor="@color/white"
                    chipcloud:deselectedFontColor="@color/black"
                    chipcloud:gravity="left"
                    chipcloud:minHorizontalSpacing="8dp"
                    chipcloud:selectMode="single"
                    chipcloud:selectTransitionMS="750"
                    chipcloud:selectedColor="@color/primary"
                    chipcloud:selectedFontColor="@color/white"
                    chipcloud:textSize="12sp"
                    chipcloud:verticalSpacing="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/category_text"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/spinner_category"
                        android:popupBackground="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/text_view_date_due"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="4dp"
                    android:onClick="@{()->farg.clickOnDateTime()}"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_calendar"
                    tools:text="Date created:"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical|end"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/bg_category"
                        android:onClick="@{()->farg.clickOnSave()}"
                        android:padding="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:id="@+id/btn_save_update"
                            android:paddingBottom="4dp"
                            android:paddingTop="4dp"
                            android:fontFamily="@font/lato"
                            android:text="@string/save"
                            android:textColor="@color/text_color_red"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_send" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminateTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateDrawable="@drawable/bg_progress_rotate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>