<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="farg"
            type="com.misbah.todo.ui.addedittask.AddEditTaskFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/bg_quit_app_header"
        tools:context=".ui.profile.LoginDialogFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_image_default" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/add_tasks"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/title"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:id="@+id/edit_text_task_name"
                android:background="@drawable/bg_edit_text"
                android:layout_marginStart="14dp"
                android:textColorHint="@android:color/darker_gray"
                android:fontFamily="@font/lato"
                android:textSize="14sp"
                android:hint="@string/enter_title"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_title"
                android:inputType="textCapWords" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/description"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="@string/enter_title"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lato"
                android:hint="@string/enter_description"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="12dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/check_box_important"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:text="Important task" />

            <TextView
                android:id="@+id/text_view_date_created"
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                tools:text="Date created:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:gravity="start">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dp"
                        android:paddingTop="4dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/category"
                        android:background="@drawable/bg_category"
                        android:textColor="@color/text_color_red_faded"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_today_date"
                        android:gravity="center_vertical|end"
                        android:paddingStart="8dp"
                        android:minWidth="60dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="4dp"
                        android:drawablePadding="4dp"
                        android:paddingBottom="4dp"
                        android:layout_marginStart="16dp"
                        app:drawableStartCompat="@drawable/ic_calendar"
                        android:fontFamily="@font/lato"
                        android:background="@drawable/bg_quit_app"
                        android:textColor="@color/text_color_red"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/bg_category"
                    android:onClick="@{()->farg.clickOnSave()}"
                    android:padding="12dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_send" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminateTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateDrawable="@drawable/bg_progress_rotate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>