<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="farg"
            type="com.misbah.todo.ui.category.AddCategoryDialogFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="12dp"
        android:background="@drawable/bg_quit_app"
        tools:context=".ui.profile.LoginDialogFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="24dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@null"
                    app:tint="@color/text_color_red"
                    android:src="@drawable/ic_add_task_menu" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/add_category"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/category_text"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:textStyle="bold" />
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:background="@drawable/bg_edit_text"
                android:layout_marginStart="14dp"
                android:textColorHint="@android:color/darker_gray"
                android:fontFamily="@font/lato"
                android:textSize="14sp"
                android:hint="@string/enter_category_text"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_category_text"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="end"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/bg_category"
                    android:onClick="@{()->farg.clickOnContinue()}"
                    android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dp"
                        android:paddingTop="4dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/save"
                        android:textColor="@color/text_color_red"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_send" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminateTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateDrawable="@drawable/bg_progress_rotate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>